<resources>
    <string name="app_name">HowFastDoYouDraw</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Button strings -->
    <string name="play_string">PLAY</string>
    <string name="stats_string">STATS</string>
    <string name="dbwipe_string">Delete previous scores</string>
    <string name="motionswitch_string">Motion controls</string>
    <string name="scorewipe_string">Wipe previous scores</string>

    <!-- Radio button strings -->
    <string name="easy_string">Easy</string>
    <string name="normal_string">Normal</string>
    <string name="hard_string">Hard</string>
    <string name="custom_string">Custom</string>

    <!-- Text item strings -->
    <string name="difficulty_string">Set difficulty</string>
    <string name="custom_settings_string">Custom game settings</string>
    <string name="shape_setting_string">Shape difficulty</string>
    <string name="line_setting_string">Line width</string>
    <string name="game_time_string">Game length</string>
    <string name="hard_leaderboard">Leaderboard: Hard</string>
    <string name="normal_leaderboard">Leaderboard: Normal</string>
    <string name="easy_leaderboard">Leaderboard: Easy</string>
    <string name="custom_leaderboard">Leaderboard: Custom</string>


    <!-- Alert strings -->
    <string name="confirm_string">Delete all previous scores?</string>
    <string name="yes_string">Yes</string>
    <string name="cancel_string">Cancel</string>

    <!-- PlayActivity Button etc strings -->
    <string name="timer_text">1:00</string>
    <string name="start_game_button">HOW TO PLAY:\n Move your finger along \n the path shown. The red circle \n marks the start of the shape. \n The more shapes you follow during \n the timer, the better your score will be.\n You can skip the current shape \n with the skip button or by shaking your device. \n \n Tap when you are ready to start.</string>
    <string name="skip_figure_button">SKIP</string>
    <string name="submit_score_button">Submit the results and go \n back to main menu</string>
    <string name="skip_text">Skips left: 3</string>

    <string name="game_end_text">Game ended</string>
    <string name="you_scored_text">Your score: </string>
    <string name="score_text_default">0</string>
    <string name="name_text">Your name:</string>
    <string name="name_edit_default">ABC</string>

    <!-- Shared preferences strings -->
    <string name="settings_file">com.mobComp2020.howfastdoyoudraw</string>
    <string name="motion_set">motioncontrols</string>
    <string name="custom_shape">customshape</string>
    <string name="custom_width">customwidth</string>
    <string name="custom_length">customlength</string>
    <string name="chosen_diff">chosendiff</string>
    <string name="player_name">ABC</string>
</resources>
